Fix double rule of text-align

--- a/style.css
+++ b/style.css
@@ -5,12 +5,10 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: beige;
-    text-align: center;
 }
 
 ul {
     list-style: none;
-    text-align: center;
 }
 
 ul img {
@@ -34,13 +32,16 @@ a:hover {
 
 h1 {
     color: darkolivegreen;
+    border: 1px solid;
 }
 
 .container {
     border: 2px solid rgb(0, 11, 8);
+    text-align: center;
 }
 
 .recipes-card {
     border: 1px solid green;
     background-color: rgb(212, 212, 180);
+    text-align: center;
 }
